# Intento

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  index.html  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
docs/: AI_MODULE_GUIDE.md  AI_QUICK_START.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  KIMI_API_SETUP.md  KIMI_TEST_RESULT.md  PROGRESS.md  README.md  RELEASE_v0.1.0.md  ROADMAP.md  SUMMARY.md  TASK_2.1_IMPLEMENTATION.md  TASK_2.1_SUMMARY.md  TASK_3_1_COMPLETION_REPORT.md  TESTING_GUIDE.md  TODO.md  VISUAL_GUIDE.md  bugfix-datetime-display.md  kimi-api.md  notification-backend-implementation.md  notification-quick-start.md  notification-settings-architecture.md  notification-system-how-it-works.md  notification-system-redesign.md  phase1-implementation-summary.md  phase4-implementation.md  task-operations-architecture.md  ui-improvements-summary.md  ui-layout-adjustments-v2.md  vision-research-summary.md
src-tauri/: Cargo.toml  intent_test_results.json  run_integration_tests.sh  tauri.conf.json
src-tauri/docs/phase5/: PROGRESS.md
src-tauri/examples/: test_kimi.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: v1_initial.sql  v2_add_tag_support.sql  v3_fix_summary_types.sql  v4_add_settings_table.sql  v5_add_notification_settings.sql
src-tauri/src/: lib.rs  main.rs  window.rs
src-tauri/src/ai/: client.rs  examples.rs  mod.rs  models.rs  prompts.rs  prompts_old.rs  task_operations.rs  tests.rs
src-tauri/src/commands/: ai.rs  mod.rs  notification.rs  settings.rs  summary.rs  task.rs  test.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/summary/: generator.rs  mod.rs  period.rs  scheduler_jobs.rs
src-tauri/tests/: README.md  intent_recognition.rs  test_command_integration.rs  test_comprehensive_integration.rs  test_improved_ocr.rs  test_integration.rs  test_kimi_vision_tools.rs  test_notification_integration.rs  test_phase2_integration.rs  test_real_image.rs
(+116 files in other folders)
