[package]
name = "intento"
version = "0.1.0"
description = "智能 Todo 桌面应用"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rusqlite = { version = "0.38", features = ["bundled", "serde_json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# ADK-Rust AI 客户端
adk-core = "0.3"
adk-agent = "0.3"
adk-model = { version = "0.3", features = ["openai", "anthropic"] }
tokio-cron-scheduler = "0.15"

# macOS 窗口定制（交通灯按钮位置调整）
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
  "NSWindow", "NSButton", "NSControl", "NSView",
  "NSResponder", "NSLayoutConstraint",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
objc2-core-foundation = { version = "0.3" }

[dev-dependencies]
tempfile = "3.13"
